# iced-prototype

./: Cargo.toml
src/: account.rs  data.rs  error.rs  main.rs  mocks.rs  receive.rs  send.rs  setup.rs  tasks.rs  transactions.rs  utils.rs
