[package]
name = "iced-prototype"
version = "0.1.0"
authors = ["Justin Moon <mail@justinmoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1.1", features = ["tokio"] }
env_logger = "0.7"
log = "0.4.11"
rand = "0.7.3"
tokio = { version = "0.2", features = ["full"] }
bitcoin="0.21"

# Only used for mnemonic operations ...
rust-crypto = "0.2"
